refactor(Empty): 불필요하다 판단한 Empty 객체 삭제